<resources>
    <string name="app_name">Gouinote</string>
    <string name="Tap_to_continue">Tap to continue</string>
    <string name="Sign_in">Sign in</string>
    <string name="Create_account">Create account</string>
    <string name="Be_a_guest">Be a guest</string>
    <string name="Nickname">Nickname</string>
    <string name="Password">Password</string>
    <string name="OK">OK</string>
    <string name="Zero_notes">0 notes</string>
    <string name="No_activity">No activity</string>
    <string name="Nb_notes">%1$d notes</string>
    <string name="Nb_likes">%1$d likes</string>
    <string name="User_connected">%1$s connected</string>
    <string name="Log_out">Log out</string>
    <string name="Write_your_message">Write your message</string>
    <string name="Send_note">Send note</string>
    <string name="Error_note_is_empty">Error: note is empty</string>
    <string name="Error_note_has_not_been_added">Error: note has not been added</string>
    <string name="Note_has_been_added">Note has been added</string>
    <string name="days_ago">day(s) ago</string>
    <string name="hours_ago">hour(s) ago</string>
    <string name="minutes_ago">minute(s) ago</string>
    <string name="seconds_ago">second(s) ago</string>

    <string name="preference_file_key">fr.goui.gouinote.PREFERENCE_FILE_KEY</string>
    <string name="user_nickname">user_nickname</string>
    <string name="user_password">user_password</string>
</resources>
